feat: add file scheme to DownloadedPlayerActivity
Useful when open a file view adb
eg:adb shell am start -a android.intent.action.VIEW -t 'video/*' -d  'file:///sdcard/Path/video.mp4'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:scheme="content" />
+                <data android:scheme="file" />
                 <data android:mimeType="video/*" />
             </intent-filter>
         </activity>
